--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,18 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
+
+  {% if site.avatar -%}
+  <div class="avatar">
+    {%- if site.avatar contains "://" -%}
+    {%- assign avatar = site.avatar -%}
+    {%- else -%}
+    {%- assign avatar = site.avatar | relative_url -%}
+    {%- endif -%}
+    <img src="{{ avatar }}" class="avatar-image" alt="{{ site.author.name }}">
+  </div>
+  {%- endif %}
+  
   {{ content }}
 
 
