--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,17 +8,13 @@ layout: default
   {%- endif -%}
 
 
-  {% if site.avatar -%}
-  <div class="avatar">
-    {%- if site.avatar contains "://" -%}
-    {%- assign avatar = site.avatar -%}
-    {%- else -%}
-    {%- assign avatar = site.avatar | relative_url -%}
-    {%- endif -%}
-    <img src="{{ avatar }}" class="avatar-image" alt="{{ site.author.name }}">
-  </div>
-  {%- endif %}
-  
+  <figure class="figure  figure--{{ include.position | default: 'center' }}">
+    <img class="image" src="{{ include.image }}" alt="{{ include.alt | default: include.caption }}" {{ include.width ?
+      include.width | prepend: 'width="' | append: '"' }} {{ include.height ? include.height | prepend: 'height="' |
+      append: '"' }}>
+    {% if include.caption %}<figcaption class="caption">{{ include.caption }}</figcaption>{% endif %}
+  </figure>
+
   {{ content }}
 
 
