--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,12 +8,11 @@ layout: default
   {%- endif -%}
 
 
-  <figure class="figure  figure--{{ include.position | default: 'center' }}">
-    <img class="image" src="{{ include.image }}" alt="{{ include.alt | default: include.caption }}" {{ include.width ?
-      include.width | prepend: 'width="' | append: '"' }} {{ include.height ? include.height | prepend: 'height="' |
-      append: '"' }}>
-    {% if include.caption %}<figcaption class="caption">{{ include.caption }}</figcaption>{% endif %}
-  </figure>
+  <div class="cover-author-image">
+    <a href="{{site.baseurl}}/"><img
+        src="{{site.baseurl}}/assets/img/{% if avatar.png %}{{avatar.png}}{% endif %}"
+        alt="{{site.author}}"></a>
+  </div>
 
   {{ content }}
 
