--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,11 +8,9 @@ layout: default
   {%- endif -%}
 
 
-  <div class="cover-author-image">
-    <a href="{{site.baseurl}}/"><img
-        src="{{site.baseurl}}/assets/img/{% if avatar.png %}{{avatar.png}}{% endif %}"
-        alt="{{site.author}}"></a>
-  </div>
+  <link rel="icon" type="image/gif/png" href="avatar.png">
+
+  
 
   {{ content }}
 
