--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
 
   <link rel="icon" type="image/gif/png" href="avatar.png">
 
-  
+  <img src="/avatar.jpg" width="200" height="121" alt="Photo of 3 cats">
 
   {{ content }}
 
