--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,8 @@ layout: default
   {%- endif -%}
 
 
-  <link rel="icon" type="image/gif/png" href="avatar.png">
-
-  <img src="/avatar.jpg" width="200" height="121" alt="Photo of 3 cats">
+ 
+ <img src="avatar.jpg" style="width: 50%; height: 50%" />
 
   {{ content }}
 
