--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,8 @@ layout: default
 
 
  
- <img src="avatar.jpg" style="width: 50%; height: 50%" />
+  <img src="JU_STAFF_191211-20053.jpg" style="width: 50%; height: 50%" />
+ % <img src="avatar.jpg" style="width: 50%; height: 50%" />
 
   {{ content }}
 
