--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 
 
  
-  <img src="JU_STAFF_191211-20053.jpg" style="width: 50%; height: 50%" />
+  <img src="JU_STAFF_191211-20053.jpg" width="400" height="500" />
  
 
   {{ content }}
