--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
- <img src="https://github.com/petaleks/petaleksandar.github.io/blob/master/assets/JU_STAFF_191211-20047.jpg" width="210" height="180"/>
+ <img src="https://github.com/petaleks/petaleksandar.github.io/blob/master/assets/JU_STAFF_191211-20047.jpg" width="200" >
 
  
   
