test copyright text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,13 @@ layout: default
       {%- endif -%}</p>
   </header>
 
+  <section class="footer__about">
+                <p class="footer__about__copyright">{{ site.copyright }}</p>
+                {% if site.copyright != nil %}
+                <span class="divider">·</span>
+                {% endif %}
+   </section>
+  
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
