--- a/_includes/footer_old.html
+++ b/_includes/footer_old.html
@@ -5,10 +5,13 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
-	  
-      
-		<p class="feed-subscribe"><svg class="svg-icon orange"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg><a href="{{ "/feed.xml" | relative_url }}">Subscribe</a></p> 
-		
+        <p class="feed-subscribe">
+          <a href="{{ 'feed.xml' | relative_url }}">
+            <svg class="svg-icon orange">
+              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+            </svg><span>Subscribe</span>
+          </a>
+        </p>
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
