google scholar link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,8 @@
     <div class="social-links">
       {%- include social.html -%}
     </div>
+	
+	<a href="https://scholar.google.com/citations?user=y9xrJXUAAAAJ&hl=en">Google scholar profile</a>
 
   </div>
 
